--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div>
   <button (click)="onSelectUser()">
     <img [src]="imagePath" [alt]=""/>
-    <span>{{ name() }}</span>
+    <span>{{ name }}</span>
   </button>
 </div>
 
