--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,5 +36,5 @@
     </li>
   </ul>
 
-  <app-task [userName]="selectedUser.name"></app-task>
+  <app-task [userName]="selectedUser?.name"></app-task>
 </main>
