--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,31 +2,14 @@
 
 <main>
   <ul id="users">
-    <li>
-      <app-user
-        (select)="onSelectUser($event)"
-        [user]="users[0]"
-      />
-    </li>
-    <li>
-      <app-user
-        (select)="onSelectUser($event)"
-        [user]="users[1]"
-      />
-    </li>
-    <li>
-      <app-user
-        (select)="onSelectUser($event)"
-        [user]="users[2]"
-      />
-    </li>
-    <li>
-      <app-user
-        (select)="onSelectUser($event)"
-        [user]="users[3]"
-      />
-    </li>
+    @for (user of users; track user) {
+      <li>
+        <app-user
+          (select)="onSelectUser($event)"
+          [user]="user"
+        />
+      </li>
+    }
   </ul>
-
   <app-task [userName]="selectedUser.name"></app-task>
 </main>
