--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <main>
   <ul id="users">
-    @for (user of users; track user) {
+    @for (user of users; track user.id) {
       <li>
         <app-user
           (select)="onSelectUser($event)"
