--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,1 +1,8 @@
-<p>task works!</p>
+<article>
+  <h2>Task Title</h2>
+  <time>Time</time>
+  <p>Summary</p>
+  <p class="actions">
+    <button>COMPLETE</button>
+  </p>
+</article>
