--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,3 @@
-
-
 <section id="tasks">
   <header>
     <h2>{{ userName }}'s Tasks</h2>
@@ -9,7 +7,15 @@
   </header>
 
   <ul>
-
+    <li>
+      <app-task></app-task>
+    </li>
+    <li>
+      <app-task></app-task>
+    </li>
+    <li>
+      <app-task></app-task>
+    </li>
   </ul>
 </section>
 
