--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,7 +1,7 @@
 <article>
-  <h2>Task Title</h2>
-  <time>Time</time>
-  <p>Summary</p>
+  <h2>{{ task?.title }}</h2>
+  <time>due: {{ task?.dueDate }}</time>
+  <p>{{ task?.summary }}</p>
   <p class="actions">
     <button>COMPLETE</button>
   </p>
