--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -22,7 +22,7 @@ button {
 button:hover,
 button:active,
 .active {
-  background-color: #9965dd;
+  background-color: #af2e2e;
   color: #150722;
 }
 
