--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,15 +1,19 @@
+@if (isAddingTask) {
+  <app-new-task (cancel)="onCancelAddTask($event)"/>
+}
+
 <section id="tasks">
   <header>
     <h2>{{ userName }}'s Tasks</h2>
     <menu>
-      <button>Add Task</button>
+      <button (click)="onStartAddTask()">Add Task</button>
     </menu>
   </header>
 
   <ul>
-    @for(task of selectedUserTasks; track task.id){
+    @for (task of selectedUserTasks; track task.id) {
       <li>
-        <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
+        <app-task [task]="task" (complete)="onCompleteTask($event)"/>
       </li>
     }
   </ul>
