--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if (isAddingTask) {
-  <app-new-task (cancel)="onCancelAddTask($event)"/>
+  <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
 }
 
 <section id="tasks">
