--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
-<div>
+<app-card>
   <button [class.active]="selected" (click)="onSelectUser()">
     <img [alt]="" [src]="imagePath"/>
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
 
